[tool.poetry]
name = "streamlit-web"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "streamlit_web"}]

[tool.poetry.dependencies]
python = "^3.9"
konlpy = "^0.6.0"
wordcloud = "^1.8.2.2"
streamlit-wordcloud = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
